webpack-reactjs example

--- a/plain-js/app/index.html
+++ b/plain-js/app/index.html
@@ -130,7 +130,7 @@
       </section>
     </main>
 
-    <<script src="./image-helpers.js"></script>
+    <script src="./image-helpers.js"></script>
     <script>
       var cv = require('opencv4nodejs');
       var path = require('path');
